--- a/styles/main.css
+++ b/styles/main.css
@@ -207,7 +207,8 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     margin-right: 1px;
     padding: 0 9px;
     height: 22px;
-	max-width: 128px;
+	width: 159px;
+    text-align: center;
 }
 #menu_down .mininews ul li a{
     color: #fff;
