--- a/styles/main.css
+++ b/styles/main.css
@@ -281,6 +281,14 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
 #tape{
     float: left;
     width: 270px;
+    position: relative;
+}
+#tape .arrow{
+    background: url("/images/bg/vniz.png");
+    position: absolute;
+    right: 100%;
+    height: 20px;
+    width: 20px;
 }
 #tape .news{float: left}
 #tape .nav ul li{
