--- a/styles/main.css
+++ b/styles/main.css
@@ -292,7 +292,9 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     width: 20px;
     cursor: pointer;
 }
-
+#tape .arrow.niz{
+    background: url("/images/bg/vniz.png") no-repeat;
+}
 #tape .news{float: left}
 #tape .nav ul li{
     display: block;
