--- a/styles/main.css
+++ b/styles/main.css
@@ -298,6 +298,9 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     overflow: hidden;
     height: 805px;
 }
+.verh{
+    top: -5px;
+}
 #tape .arrow.niz{
     background: url("/images/bg/vniz.png") no-repeat;
     margin-top: 5px;
