--- a/styles/main.css
+++ b/styles/main.css
@@ -298,8 +298,17 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     overflow: hidden;
     height: 805px;
 }
-.verh{
+#tape .arrow.verh{
     top: -5px;
+}
+.pre{
+    background: url("/images/bg/pretape.gif");
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    bottom: -5px;
+    left: 40%;
+    display: none;
 }
 #tape .arrow.niz{
     background: url("/images/bg/vniz.png") no-repeat;
