--- a/styles/main.css
+++ b/styles/main.css
@@ -40,7 +40,7 @@ a:hover, a:active, .a:hover, .a:active{text-decoration:none;color:#010101;}
 h1{font: bold  20px/28px 'Arial';color: #555; margin: 0 0 10px 0; }
 h2{font: bold italic 16px 'Georgia';}
 .f16 {font-size: 16px;}
-.f14 {font-size: 14px;}
+.f14 {font-size: 14px;}пресс-служба министерства образования региона
 /*RESET END*/
 /*BUTTON*/
 .login button span span span {padding: 0 7px;}
@@ -291,6 +291,10 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     height: 20px;
     width: 20px;
     cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;  
 }
 #is_tape{
     margin-top: 20px;
@@ -302,11 +306,11 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     top: -5px;
 }
 .pre{
-    background: url("/images/bg/pretape.gif");
-    width: 32px;
-    height: 32px;
+    background: url("/images/pre.gif");
+    width: 40px;
+    height: 40px;
     position: absolute;
-    bottom: -5px; 
+    bottom: -11px; 
     left: 40%;
     display: none;
 }
