--- a/styles/main.css
+++ b/styles/main.css
@@ -280,12 +280,40 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
 #block_news{padding-top: 10px;padding-bottom: 20px;}
 #popup_lenta{
     display: block;
-    height: 200px;
-    width: 200px;
-    border-radius: 2px;
+    height: 100px;
+    width: 292px;
+    border-radius: 4px;
+    position: absolute;
+    background: #fff;
+    border: 41px #000;
+    z-index: 2222;
+    opacity: 1;
+}
+#popup_lenta .title{
+    position: absolute;
+    padding: 14px 15px;
+    width: 260px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: bold;
+}
+#popup_lenta .line{
+    position: relative;
+    width: 100%;
+    height: 34px;
+    margin: 43px 0px;
+}
+#popup_lenta form{
+    margin-left: 10px;
+}
+#popup_lenta form input{
+    height: 26px;
 }
 #popup_lenta button{
-    background: #bababa;
+    height: 35px;
+    width: 112px;
+    border-radius: 5px;
+    box-shadow: 0px 1px 4px #000;
 }
 #tape{
     float: left;
