--- a/styles/main.css
+++ b/styles/main.css
@@ -284,6 +284,7 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     position: relative;
     top: -2px;
     padding-left: 43px;
+    cursor: pointer;
 }
 #popup_lenta{
     display: block;
@@ -293,8 +294,10 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     position: absolute;
     background: #fff;
     border: 1px dotted #bababa;
+    box-shadow: 0px 1px 3px #999;
     z-index: 2222;
     opacity: 1;
+    display: none;
 }
 #popup_lenta .title{
     position: absolute;
@@ -311,7 +314,7 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     margin: 43px 0px;
 }
 #popup_lenta form{
-    margin-left: 10px;
+    margin-left: 18px;
 }
 #popup_lenta form input{
     height: 20px;
