--- a/styles/main.css
+++ b/styles/main.css
@@ -286,6 +286,11 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     padding-left: 43px;
     cursor: pointer;
 }
+.response{
+    padding-top: 0px;
+    position: relative;
+    bottom: 4px;
+}
 #popup_lenta{
     display: block;
     height: 100px;
