--- a/styles/main.css
+++ b/styles/main.css
@@ -291,6 +291,10 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     top: -2px;
     padding-left: 43px;
     cursor: pointer;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
 }
 .response{
     padding-top: 0px;
