--- a/styles/main.css
+++ b/styles/main.css
@@ -295,6 +295,9 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     -webkit-user-select: none;
     -khtml-user-select: none;
     user-select: none;
+    position: absolute;
+    height: 40px;
+    z-index: 200;
 }
 .response{
     padding-top: 0px;
