--- a/styles/main.css
+++ b/styles/main.css
@@ -317,6 +317,21 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     opacity: 1;
     display: none;
 }
+#popup_lenta.top:before {
+    border-left: 10px solid rgba(113, 101, 58, 0);
+    border-right: 10px solid rgba(113, 101, 58, 0);
+    border-top: 10px solid #71653a;
+    left: 20px;
+    bottom: -10px;
+}
+
+#popup_lenta.top:after {
+    border-left: 10px dotted #bababa;
+    border-right: 10px dotted #bababa;
+    border-top: 10px dotted #bababa;
+    left: 20px;
+    bottom: -9px;
+}
 #popup_lenta .title{
     position: absolute;
     padding: 14px 15px;
