popup css triangle

--- a/styles/main.css
+++ b/styles/main.css
@@ -322,7 +322,7 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     position: absolute;
     border-left: 10px solid rgba(113, 101, 58, 0);
     border-right: 10px solid rgba(113, 101, 58, 0);
-    border-bottom: 10px solid #71653a;
+    border-bottom: 10px dotted #71653a;
     left: 20px;
     top: -10px;
 }​
@@ -332,7 +332,7 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     position: absolute;
     border-left: 10px solid rgba(255, 241, 190, 0);
     border-right: 10px solid rgba(255, 241, 190, 0);
-    border-bottom: 10px solid #fff1be;
+    border-bottom: 10px solid #fff;
     left: 20px;
     top: -9px;
 }​
