--- a/styles/main.css
+++ b/styles/main.css
@@ -311,7 +311,7 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     border-radius: 4px;
     position: absolute;
     background: #fff;
-    border: 1px dotted #bababa;
+    border: 1px solid #bababa;
     box-shadow: 0px 1px 3px #999;
     z-index: 2222;
     opacity: 1;
@@ -324,17 +324,17 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
 #popup_lenta.top:before {
     border-left: 10px solid rgba(113, 101, 58, 0);
     border-right: 10px solid rgba(113, 101, 58, 0);
-    border-top: 10px solid #71653a;
+    border-bottom: 10px solid #bababa;
     left: 20px;
-    bottom: -10px;
+    top: -10px;
 }
 
 #popup_lenta.top:after {
     border-left: 10px solid rgba(255, 241, 190, 0);
     border-right: 10px solid rgba(255, 241, 190, 0);
-    border-top: 10px solid #fff1be;
+    border-bottom: 10px solid #fff;
     left: 20px;
-    bottom: -9px;
+    top: -9px;
 }
 #popup_lenta .title{
     position: absolute;
