--- a/styles/main.css
+++ b/styles/main.css
@@ -285,20 +285,20 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
     color: red;
 }
 .icon-mail{
-    background: url("/images/bg/mail.png");
+    /*background: url("/images/bg/mail.png");*/
     background-repeat: no-repeat;
     margin-left: 160px;
     display: block;
     position: relative;
-    top: -2px;
-    padding-left: 43px;
+    top: 8px;
     cursor: pointer;
     -moz-user-select: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
     user-select: none;
     position: absolute;
-    height: 40px;
+    border-bottom: 1px dotted #bababa;
+    font-size: 10px;
     z-index: 200;
     zoom: 1;
 }
