--- a/styles/main.css
+++ b/styles/main.css
@@ -359,7 +359,7 @@ button span span span {background:url("/images/bg/bg_button-c.png") repeat-x 0 0
 }
 #popup_lenta form input{
     height: 20px;
-    color: #ccc;
+    color: #0a0a0a;
 }
 
 #tape{
