--- a/styles/admin/main.css
+++ b/styles/admin/main.css
@@ -270,3 +270,6 @@ h3 { font: 14px/20px 'Arial'; color: #000000;}
 	margin-bottom: 5px;
 	margin-right: 5px;
 }
+.filter-list select,.filter-list input  {
+	margin: 5px 0;
+}
