--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -32,6 +32,6 @@
 	border-bottom: 1px solid #6e6e6e;
 }
 #lenta .random_block{
-	padding: 15px;
+	padding: 15px 0;
 	border-bottom: 1px solid #6e6e6e;
 }
