--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -36,7 +36,7 @@
 	border-bottom: 1px solid #6e6e6e;
 }
 #lenta .i_am_alone{
-	background: url("/images/bg/alone.png") no-repeat 3px 48%;
+	background: url("/images/bg/alone.png") no-repeat 3px 48% #3d2b1f;
 	cursor: pointer;
 	width: 25px;
 	height: 100%;
