lenta BUDET DODELANA

--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -27,6 +27,9 @@
 #lenta ul li a:hover{
 	color: #ccc;
 }
+#lenta ul li a.active{
+	color: #ccc;
+}
 #lenta .block_1{
 	padding-bottom: 15px;
 	border-bottom: 1px solid #6e6e6e;
