--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -57,3 +57,20 @@
 		display: block;
 	}
 }
+.partner_block ul li{
+	float: left;
+	width: 182px;
+	margin-left: 10px;
+}
+.partner_block ul li:first-child{
+	margin-left: 0px;
+}
+.partner_block ul li .caption a{
+	text-decoration: none;
+	color: #0d44a0;
+	font-size: 14px;
+}
+.partner_block ul li .text{
+	font-size: 12px;
+	line-height: 14px;
+}
