--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -66,7 +66,6 @@
 	margin-left: 0px;
 }
 .partner_block ul li .caption a{
-	text-decoration: none;
 	color: #0d44a0;
 	font-size: 14px;
 }
@@ -93,4 +92,11 @@
 .recomend ul li .text{
 	font-size: 12px;
 	line-height: 14px;
+}
+#say_out .item{
+	width: 475px;
+	float: left;
+}
+#say_otu .block_1 img{
+	float: left;
 }
