--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -97,13 +97,13 @@
 	width: 475px;
 	float: left;
 }
-#say_otu .block_1 .img{
+#say_out .block_1 .img{
 	float: left;
 	margin-left: 10px;
 }
-#say_otu .block_1 .img:first-child{
+#say_out .block_1 .img:first-child{
 	margin-left: 0px;
 }
-#say_otu .block_1, #say_otu .block_2{
+#say_out .block_1, #say_otu .block_2{
 	float: left;
 }
