--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -93,17 +93,17 @@
 	font-size: 12px;
 	line-height: 14px;
 }
-#say_out .item{
+.say_out .item{
 	width: 475px;
 	float: left;
 }
-#say_out .block_1 .img{
+.say_out .block_1 .img{
 	float: left;
 	margin-left: 10px;
 }
-#say_out .block_1 .img:first-child{
+.say_out .block_1 .img:first-child{
 	margin-left: 0px;
 }
-#say_out .block_1, #say_otu .block_2{
+.say_out .block_1, .say_otu .block_2{
 	float: left;
 }
