--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -107,3 +107,14 @@
 .say_out .block_1, .say_otu .block_2{
 	float: left;
 }
+.say_out .link{
+	color: #878787;
+	text-decoration: none;
+	border-bottom: 1px dotted #878787;
+}
+.say_out ul{
+	margin-top: 20px;
+}
+.say_out .say_out_button{
+	margin-top: 20px;
+}
