--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -101,13 +101,13 @@
 	float: left;
 	margin-left: 10px;
 }
-.say_out .block_1 .img:first-child{
+.say_out .block_1 .img.ml0{
 	margin-left: 0px;
 }
 .say_out .block_1, .say_otu .block_2{
 	float: left;
 }
-.say_out .link{
+.say_out .link a{
 	color: #878787;
 	text-decoration: none;
 	border-bottom: 1px dotted #878787;
