--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -111,10 +111,13 @@
 	color: #878787;
 	text-decoration: none;
 	border-bottom: 1px dotted #878787;
+	font-size: 11px;
 }
 .say_out ul{
-	margin-top: 20px;
+	margin-top: 31px;
 	padding-left: 10px;
+	width: 148px;
+	word-wrap: break-word;
 }
 .say_out .img{
 	margin-top: 20px;
