--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -104,7 +104,7 @@
 .say_out .block_1 .img.ml0{
 	margin-left: 0px;
 }
-.say_out .block_1, .say_otu .block_2{
+.say_out .block_1, .say_out .block_2{
 	float: left;
 }
 .say_out .link a{
