--- a/styles/main.css
+++ b/styles/main.css
@@ -1894,6 +1894,10 @@ a:hover h1{
     width: 351px;
 }
 
+.social_link {
+	cursor: pointer;
+}
+
 .informer {
 	background: none repeat scroll 0 0 white;
 	border: 1px solid #6D57A1;
