--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -190,6 +190,9 @@
     text-decoration: underline;
     color: #ff0000;
 }
+.block_all_bew .item: first-child{
+	margin-top: 25px;
+}
 .block_all_bew{
 	float: left;
 	width: 700px;
@@ -212,6 +215,7 @@
 	margin-left: 0px;
 }
 .ap_bl{
+	margin-bottom: 45px;
 	width: 250px;
 	height: 360px;
 	background: #bababa;
