--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -128,6 +128,9 @@
 .say_out .img{
 	margin-top: 20px;
 }
+.my_new_afish {
+	margin-top: 25px;
+}
 .my_new_afish .img1, .my_new_afish .img2, .my_new_afish .ap{
 	float: left;
 }
