--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -154,6 +154,9 @@
 	width: 195px;
 	height: 270px;
 }
+.kenta{
+	margin-top: 15px;
+}
 .kenta .item .hidden_item{
 	float:left;
 	margin-left: 20px;
