--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -236,14 +236,15 @@
 	margin-bottom: 200px;
 }
 .psevdo{
+	width: 257px;
 	float: left;
 }
 .psevdo .news .item {padding: 6px 0px 6px 10px;border: 1px solid transparent; margin-left: -10px;}
 .psevdo .news .item:hover {border: 1px solid #bababa; box-shadow: 0 0 5px #bababa}
 .psevdo .time, .psevdo .comments, .psevdo .title{color: #878787;}
-.psevdo .news .item a{text-decoration: none}
-.psevdo .news .item .note a:hover{text-decoration: underline}
-.psevdo .news .item .note a{color: #000;}
+.psevdo .item a{text-decoration: none}
+.psevdo .item .note a:hover{text-decoration: underline}
+.psevdo .item .note a{color: #878787;}
 .psevdo .title {padding-right:5px;}
 .psevdo .comments {padding-left:5px;}
 .psevdo .time{padding-bottom: 4px;}
