--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -244,7 +244,10 @@
 .psevdo .time, .psevdo .comments, .psevdo .title{color: #878787;}
 .psevdo .item a{text-decoration: none}
 .psevdo .item .note a:hover{text-decoration: underline}
-.psevdo .item .note a{color: #878787;}
+.psevdo .item .note a:first-child{
+	color: #878787;
+}
+.psevdo .item .note a{color: #000;}
 .psevdo .title {padding-right:5px;}
 .psevdo .comments {padding-left:5px;}
 .psevdo .time{padding-bottom: 4px;}
