--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -238,9 +238,11 @@
 .psevdo{
 	width: 257px;
 	float: left;
-	margin-left: 14px;
+	margin-left: 22px;
 }
-
+.psevdo h1{
+	padding-left: 0px;
+}
 .psevdo .item {padding: 6px 0px 6px 10px;border: 1px solid transparent; margin-left: -10px;}
 .psevdo .item:hover {border: 1px solid #bababa; box-shadow: 0 0 5px #bababa}
 .psevdo .time, .psevdo .comments, .psevdo .title{color: #878787;}
