--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -267,3 +267,9 @@
 #item_new .text .date{
 	margin-right: 301px;
 }
+.caption_top_news{
+	padding: 0;
+	margin: 0;
+	margin-bottom: 15px;
+	color: #555555;
+}
