--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -241,7 +241,10 @@
 	margin-left: 22px;
 }
 #item_news .psevdo h1{
-	padding-left: 0px;
+	padding: 0;
+	margin: 0;
+	line-height: 26px;
+	margin-bottom: 5px;
 }
 .psevdo .item {padding: 6px 0px 6px 10px;border: 1px solid transparent; margin-left: -10px;}
 .psevdo .item:hover {border: 1px solid #bababa; box-shadow: 0 0 5px #bababa}
