--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -270,7 +270,7 @@
 #item_new .text .date{
 	margin-right: 301px;
 }
-.caption_top_news{
+#item_news .caption_top_news{
 	padding: 0;
 	margin: 0;
 	margin-bottom: 15px;
