--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -269,7 +269,7 @@
 #item_new .text .date{
 	margin-right: 301px;
 }
-#item_news .caption_top_news{
+#item_news .caption_top_news h1{
 	padding: 0;
 	margin: 0;
 	margin-bottom: 15px;
