--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -285,7 +285,7 @@
 	width: 444px;
 	color: #000;
 	font-size: 11px;
-	padding: 22px 0 16px;
+	margin: 22px 0 16px;
 }
 .table1 .t1{
 	margin-left: 5px;
