--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -311,6 +311,6 @@
 .line{
 	width: 100%;
 	height: 2px;
-	border-bottom: 1px solid #d5d5d5;
+	border-top: 1px solid #d5d5d5;
 	background: url("/images/tmp/tria.png")no-repeat;
 }
