--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -285,7 +285,7 @@
 	width: 444px;
 	color: #000;
 	font-size: 11px;
-	margin: 19px 0 10px;
+	margin: 19px 0 0px;
 }
 .table1 .t1{
 	margin-left: 5px;
@@ -309,8 +309,9 @@
 	margin-bottom: 14px;
 }
 .line{
+	margin-top: 10px;
 	width: 100%;
 	height: 4px;
 	border-top: 1px solid #d5d5d5;
-	background: url("/images/tmp/tria.png")no-repeat;
+	background: url("/images/tmp/tria.png")no-repeat 8px -13px;
 }
