--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -249,7 +249,7 @@
 	color: #bababa;
 	font-size: 11px;
 	text-decoration: none;
-	border-bottom: 1px dotted #bababa;
+	border-bottom: 1px dotted #878787;
 }
 #item_news .psevdo h1{
 	float: left;
@@ -330,4 +330,24 @@
 	top: -9px;
 	position: relative;
 	left: 15px;
+}
+.psevdo .item{
+	position: relative;
+}
+.psevdo{
+	position: relative;
+}
+.psevdo .pre-item{
+	position: relative;
+}
+.load_content_news{
+	position: absolute;
+	width: 380px;
+	height: 144px;
+	background: white;
+	z-index: 1000;
+	top: 61px;
+	left: -68px;
+	border: 1px solid #bababa;
+	box-shadow: 0 0 5px #bababa;
 }
