--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -350,3 +350,13 @@
 	border: 1px solid #bababa;
 	box-shadow: 0 0 5px #bababa;
 }
+.load_content_news .img{
+	float: left;
+	margin-right: 10px;
+}
+.load_content_news .caption{
+	color: #555555;
+	font-size: 16px;
+	line-height: 18px;
+	margin-bottom: 13px;
+}
