--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -351,7 +351,7 @@
 	border: 1px solid #bababa;
 	box-shadow: 0 0 5px #bababa;
 }
-.load_content_news .img{
+.load_content_news img{
 	float: left;
 	margin-right: 10px;
 }
