--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -356,6 +356,7 @@
 	margin-right: 10px;
 }
 .load_content_news .caption{
+	font-weight: bold;
 	color: #555555;
 	font-size: 16px;
 	line-height: 18px;
