--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -365,4 +365,15 @@
 }
 a.al_bt{
 	display: block;
+	height: 25px;
+	width: 25px;
+	float: left;
+	position: relative;
+	top: 4px;
+	left: 6px;
+	margin-left: 7px;
+	cursor: pointer;
+}
+a.al_bt:first-child{
+	margin-left: 0px;
 }
