--- a/styles/lenta.css
+++ b/styles/lenta.css
@@ -133,7 +133,9 @@
 .say_out .img{
 	margin-top: 20px;
 }
-.my_new_afish {}
+.my_new_afish .img1{
+	width: 244px;
+}
 .my_new_afish .img1, .my_new_afish .img2, .my_new_afish .ap{
 	float: left;
 }
